# econ-research-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: refresh.yml  weekly-refresh.yml
config/: jel_taxonomy.yaml  journal_feeds.yaml
dashboard/: app.py  requirements.txt
data/processed/: papers.jsonl
digests/: monthly_latest.md  weekly_deep_latest.md
src/econ_agent/: __init__.py  cli.py  models.py  storage.py
src/econ_agent/digest/: monthly.py  weekly_deep.py
src/econ_agent/pipeline/: classify.py  enrich.py
src/econ_agent/sources/: __init__.py  _common.py  _ideas.py  arxiv.py  cepr.py  iza.py  journals.py  nber.py  openalex_ssrn.py  repec_nep.py
