[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "econ-research-agent"
version = "0.1.0"
description = "Collects, classifies, and digests recent economics research papers."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Nency Dhameja"}]
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "rich>=13.7",
    "anthropic>=0.39",
    "streamlit>=1.32",
    "pandas>=2.2",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
econ-agent = "econ_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
